# rubidium

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CPPLINT.cfg  TODO.md  rb.natvis
.github/workflows/: ci.yml
cmake/: 000-FallbackOsRelease.cmake  Compilers.cmake  Deploy.cmake  Features.cmake  Sanitizers.cmake  Utils.cmake  compilers.cmake  deploy.cmake  features.cmake
src/: CMakeLists.txt  RbConfig.cmake.in  main.cpp
src/rb/: CMakeLists.txt  version.hpp.in
src/rb/containers/: List.hpp  Vector.hpp  package.hpp
src/rb/containers/test/: List.cpp
src/rb/core/: Any.hpp  Array.hpp  CompilerInfo.hpp  ErrorCode.cpp  ErrorCode.hpp  Expected.hpp  Flags.hpp  Option.hpp  SourceLocation.hpp  Span.hpp  Version.hpp  assert.cpp  assert.hpp  attributes.hpp  bits.hpp  builtins.hpp  byte.hpp  compiler.hpp  decayCopy.hpp  enable_special_members.hpp  endian.hpp  enums.hpp  exchange.hpp  export.hpp  features.hpp  flag.hpp  has.hpp  helpers.hpp  in_place.hpp  int128.hpp  invoke.hpp  iter.hpp  keywords.hpp  limits.hpp  move.hpp  os.hpp  package.hpp  processor.hpp  quorem.hpp  requires.hpp  (+7 more)
src/rb/core/error/: Error.cpp  Error.hpp  InvalidArgumentError.hpp  NotImplementedError.hpp  OsError.cpp  OsError.hpp  RangeError.hpp  package.hpp
src/rb/core/iter/: ContainerTraits.hpp  IteratorTraits.hpp  package.hpp  primitives.hpp  tags.hpp
src/rb/core/memory/: AllocationResult.hpp  Allocator.hpp  AllocatorTraits.hpp  CompressedPair.hpp  DefaultDeleter.hpp  EmptyBase.hpp  OwnerPtr.hpp  PointerTraits.hpp  UniquePtr.hpp  Wrapper.hpp  addressOf.hpp  allocators.hpp  construct.hpp  destroy.hpp  helpers.hpp  package.hpp  toAddress.hpp  uninitialized.hpp
src/rb/core/meta/: TypeSeq.hpp  ValueSeq.hpp  package.hpp
src/rb/core/slices/: ContiguousView.hpp  Slice.hpp  Sliceable.hpp  StepIterator.hpp  StepSlice.hpp  ViewImpl.hpp  package.hpp  primitives.hpp
src/rb/core/str/: CharTraits.hpp  StaticString.hpp  StringView.hpp  package.hpp
src/rb/core/test/: SourceLocation.cpp
src/rb/core/traits/: Bool.hpp  CommonType.hpp  Conditional.hpp  Constant.hpp  Decay.hpp  EnableIf.hpp  FunctionTraits.hpp  IsArithmetic.hpp  IsBaseOf.hpp  IsComplete.hpp  IsConst.hpp  IsConstexprCall.hpp  IsConvertible.hpp  IsEnumerable.hpp  IsFloatingPoint.hpp  IsFunction.hpp  IsIntegral.hpp  IsObject.hpp  IsPointer.hpp  IsRef.hpp  IsSame.hpp  IsScalar.hpp  IsSigned.hpp  IsTupleLike.hpp  IsUnsigned.hpp  IsVoid.hpp  None.hpp  Signed.hpp  TypeIdentity.hpp  Unsigned.hpp  Void.hpp  add.hpp  alwaysFalse.hpp  arrays.hpp  assignable.hpp  builtins.hpp  constructible.hpp  declval.hpp  destructible.hpp  detection.hpp  (+8 more)
src/rb/ext/: NotNull.hpp  Nullable.hpp  ZeroMemory.cpp  ZeroMemory.hpp  package.hpp
src/rb/fmt/: StreamStateSaver.hpp  ToHex.hpp  charconv.hpp  hex.hpp  package.hpp  pprint.hpp  quoted.hpp
src/rb/interval/: CMakeLists.txt  Interval64.cpp  Interval64.hpp  RoundSaver.cpp  RoundSaver.hpp
src/rb/math/: float.hpp  max.hpp  minmax.hpp
src/rb/ranges/: InputRange.hpp  IteratorRange.hpp  OutputRange.hpp  package.hpp  primitives.hpp  range.hpp  traits.hpp
src/rb/sync/: Barrier.cpp  Barrier.hpp  CMakeLists.txt  ConditionMutex.cpp  ConditionMutex.hpp  ConditionVariable.cpp  ConditionVariable.hpp  LockGuard.hpp  Mutex.cpp  Mutex.hpp  Once.hpp  OsThread.cpp  OsThread.hpp  RecursiveMutex.cpp  RecursiveMutex.hpp  Semaphore.cpp  Semaphore.hpp  SharedMutex.cpp  SharedMutex.hpp  SpinLock.cpp  SpinLock.hpp  Thread.cpp  Thread.hpp  annotations.hpp  impl.hpp  package.hpp  traits.hpp
src/rb/time/: Clock.cpp  Clock.hpp  Duration.cpp  Duration.hpp  I64.hpp  Instant.hpp  LongDuration.cpp  LongDuration.hpp  MonoTime.cpp  MonoTime.hpp  SteadyClock.cpp  SteadyClock.hpp  SystemClock.cpp  SystemClock.hpp  SystemTime.cpp  SystemTime.hpp  Time.cpp  Time.hpp  TimePoint.hpp  TimeSpec.hpp  package.hpp  windows.hpp
tests/: CMakeLists.txt
